# LW-Egosuite-DevKit

./: .dockerignore  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
assets/: default_layout.json
foxglove_backend/: mcap_writer.py  server.py  std_pipeline.py  tyro_cli.py
foxglove_backend/base/: __init__.py  base_pipeline.py  base_reader.py  base_writer.py
foxglove_backend/converters/: std_mcap.py
foxglove_backend/converters/pose/: std_mcap.py
foxglove_backend/proto/: __init__.py
foxglove_backend/proto/py/foxglove/: ArrowPrimitive_pb2.py  CameraCalibration_pb2.py  Color_pb2.py  CompressedImage_pb2.py  CubePrimitive_pb2.py  FrameTransform_pb2.py  FrameTransforms_pb2.py  GeoJSON_pb2.py  Grid_pb2.py  ImageAnnotations_pb2.py  KeyValuePair_pb2.py  LaserScan_pb2.py  LinePrimitive_pb2.py  LocationFix_pb2.py  Log_pb2.py  ModelPrimitive_pb2.py  Point2_pb2.py  PointsAnnotation_pb2.py  PoseInFrame_pb2.py  Pose_pb2.py  PosesInFrame_pb2.py  RawAudio_pb2.py  SceneUpdate_pb2.py  SpherePrimitive_pb2.py  TextAnnotation_pb2.py  Vector2_pb2.py  Vector3_pb2.py
foxglove_backend/proto/py/lightwheel/: SubtaskAnnotation_pb2.py
foxglove_backend/visualizers/: __init__.py  annotations.py  audio.py  scene_update_generator.py  std_pcd_static.py
lw_egosuite_backend/: export_mcap_video.py  logging_config.py  mcap_reader.py  mcap_writer.py  server.py  std_pipeline.py  tyro_cli.py
lw_egosuite_backend/base/: base_generator.py  base_pipeline.py  base_reader.py  base_writer.py
lw_egosuite_backend/converters/: std_mcap.py
lw_egosuite_backend/converters/pose/: std_mcap.py
lw_egosuite_backend/proto/py/foxglove/: CircleAnnotation_pb2.py  CompressedVideo_pb2.py  CylinderPrimitive_pb2.py  PackedElementField_pb2.py  Point3_pb2.py  PointCloud_pb2.py  Quaternion_pb2.py  RawImage_pb2.py  SceneEntityDeletion_pb2.py  SceneEntity_pb2.py  TextPrimitive_pb2.py  TriangleListPrimitive_pb2.py
lw_egosuite_backend/proto/py/lightwheel/: builtins_pb2.py
lw_egosuite_backend/visualizers/: __init__.py  frame_tf.py  low_quality.py  scene_update_generator.py  std_pcd_static.py
proto/foxglove/: CompressedVideo.proto
proto/lightwheel/: SubtaskAnnotation.proto  builtins.proto
