[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
"write_to" = "lw_egosuite_backend/version.py"

[project]
name = "lw-egosuite-devkit"
version = "0.1.4"
description = "Lightwheel Egosuite DevKit - MCAP conversion and visualization pipeline"
readme = "README.md"
license = { text = "Apache-2.0" }

requires-python = ">= 3.10"

dependencies=[
    "mcap==1.3.1",
    "mcap_protobuf_support==0.5.4",
    "numpy",
    "opencv_python==4.13.0.90",
    "pypcd4==1.4.3",
    "scipy==1.17.0",
    "setproctitle==1.3.7",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "tyro==1.0.5",
    "tornado==6.5.4"
]

[tool.setuptools.packages]
find = {}

[project.scripts]
lw-egosuite = "lw_egosuite_backend.tyro_cli:entrypoint"
